- Styling: fixed tabbed bar alignment

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -18523,9 +18523,8 @@ iframe.file-browser {
 
 .tabbed-bar > .toolbar-nav {
   display: flex;
-  margin: 0;
+  margin: 0 0 -6px;
   padding: 0;
-  margin-bottom: -6px;
   list-style-type: none;
 }
 
@@ -18558,6 +18557,10 @@ iframe.file-browser {
 
 .tabbed-bar > .toolbar-nav > li.more-items {
   font-weight: initial;
+}
+
+.tabbed-bar > .toolbar-nav > li.more-items > .dropdown > .btn {
+  padding: 0;
 }
 
 .tabbed-bar > .toolbar-nav > li.more-items .ti {
